--- a/game/game.html
+++ b/game/game.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Three.js page</title>
+    <title>Seeking Game</title>
     <link rel="stylesheet" type="text/css" href="game.css"/>
 </head>
 <body>
     <script src="lib/three.min.js"></script>
+    <script src="lib/Tween.js"></script>
     <script src="lib/stats.min.js"></script>
     <script src="lib/bigscreen.min.js"></script>
     <script src="lib/FirstPersonControls.js"></script>
+    <script src="util.js"></script>
     <script src="map.js"></script>
     <script src="player.js"></script>
     <script src="game.js"></script>
     <div id="world"></div>
+    <button id="rotate">rotate</button>
     <button id="full-btn"></button>
 </body>
 </html>
