Update: the rotation system. Update: the extra light.

--- a/game/game.html
+++ b/game/game.html
@@ -15,7 +15,7 @@
     <script src="player.js"></script>
     <script src="game.js"></script>
     <div id="world"></div>
-    <button id="rotate">rotate</button>
+    <button id="rotate">test</button>
     <button id="full-btn"></button>
 </body>
 </html>
